feat: 고객정보 조회 기능 추가 및 API명세서에 맞게 API수정